[minor] make batch size 1

--- a/test.ipynb
+++ b/test.ipynb
@@ -61,7 +61,7 @@
     "net.cuda()\n",
     "\n",
     "# load the weights for the model\n",
-    "net.load_state_dict(torch.load('train/HED.pth'))"
+    "net.load_state_dict(torch.load('train/model.pth'))"
    ]
   },
   {
@@ -163,13 +163,6 @@
     "    if i%nVisualize == 0:\n",
     "        plotResults(out, 25)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -188,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
